--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "flowbite": "^2.3.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.38",
+        "select2": "^4.1.0-rc.0",
         "tailwindcss": "^3.4.3",
         "vite": "^5.0"
     },
