--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "pnpm vite",
+        "build": "pnpm vite build"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.19",
